samples/_failures_safe/1761418025_3a3f09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bba6a8bb.c: In function ‘main’:
./samples/SAFE/__tmp_bba6a8bb.c:160:5: error: expected expression at end of input
  160 |     if (!
      |     ^~
./samples/SAFE/__tmp_bba6a8bb.c:160:5: error: expected declaration or statement at end of input
